syntax = "proto3";
package remote;
option go_package = "/github.com/kercylan98/minotaur/core/transport";

// ActorSystem 通讯服务
service ActorSystemCommunication {
  rpc StreamHandler (stream DistributedMessage) returns (stream DistributedMessage) {}
}

message DistributedMessage {
  oneof message_type {
    ConnectionOpen connection_open = 1;
    ConnectionOpened connection_opened = 2;
    ConnectionClosed connection_closed = 3;
    ConnectionMessageBatch connection_message_batch = 4;
  }
}

message ConnectionOpen {
  string Address = 1;
}

message ConnectionOpened {
}

message ConnectionClosed {

}

message ConnectionMessageBatch {
  repeated bytes sender_address = 1;
  repeated bytes receiver_address = 2;
  repeated bytes regulatory_message_sender_address = 3;
  repeated string type_name = 4;
  repeated bytes message_data = 5;
  repeated bool bad = 6;
  repeated bool system = 7;
}
